--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS only -->
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="/css/front.css">
+    <link rel="stylesheet" href="css/front.css">
     <title>Portfolio</title>
 </head>
 
