--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <!-- End Footer section -->
     
     <!-- Script for html -->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 
