--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class='about container' >
                 <div class="col-left">
                     <div class="about-img">
-                        <img src="/images/myimage.png" alt="img">
+                        <img src="images/myimage.png" alt="img">
                     </div>
                 </div>
                 <div class="col-right">
