--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                     <div class='cur-img'>
-                        <img src="/images/img-1.png" alt="">
+                        <img src="images/img-1.png" alt="">
                     </div>
                 </div>
 
@@ -149,7 +149,7 @@
                         </p>
                     </div>
                     <div class='cur-img'>
-                        <img src="/images/img-1.png" alt="">
+                        <img src="images/img-1.png" alt="">
                     </div>
                 </div>
 
